Set overflow: hidden to prevent resize/redraw loop

--- a/data/css/main.css
+++ b/data/css/main.css
@@ -6,6 +6,7 @@ html {
     font-size:        14px;
     background-color: #222;
     color:            #ddd;
+    overflow:         hidden;
 }
 
 body {
